feat: add open distro plugins